--- a/SwiftStock(Redo)/Pages/Sales.cshtml
+++ b/SwiftStock(Redo)/Pages/Sales.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model AlfaMart.Pages.SalesModel
 @{
-    ViewData["Title"] = "Sales";
+       ViewData["Title"] = "Home";
+    Layout = "_HomepageLayout";
 }
 
 <!DOCTYPE html>
