--- a/SwiftStock(Redo)/Pages/Settings.cshtml
+++ b/SwiftStock(Redo)/Pages/Settings.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model SwiftStock.Pages.Account.SettingsModel
 @{
-    Layout = "_SettingsLayout";
     ViewData["Title"] = "Account Settings";
+    Layout = "_HomepageLayout";
 }
 
 <div class="space-y-6">
