--- a/SwiftStock(Redo)/Pages/AccountSettings.cshtml
+++ b/SwiftStock(Redo)/Pages/AccountSettings.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model SwiftStock.Pages.Account.SettingsModel
+@model SwiftStock.Pages.SettingsModel
 @{
-    ViewData["Title"] = "Account Settings";
+    ViewData["Title"] = "Settings";
     Layout = "_HomepageLayout";
 }
 
