--- a/SwiftStock(Redo)/Pages/Shared/_HomepageLayout.cshtml
+++ b/SwiftStock(Redo)/Pages/Shared/_HomepageLayout.cshtml
@@ -152,7 +152,7 @@
                 <span class="sidebar-text">Home</span>
             </a>
 
-            <a href="/Settings" class="nav-item">
+            <a href="/AccountSettings" class="nav-item">
                 <i class="material-icons">settings</i>
                 <span class="sidebar-text">Account Settings</span>
             </a>
