--- a/SwiftStock(Redo)/Pages/Admin.cshtml
+++ b/SwiftStock(Redo)/Pages/Admin.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model AlfaMart.Pages.AdminModel
+@using SwiftStock.Pages
+@model SwiftStock.Pages.AdminModel
 @{
     ViewData["Title"] = "Admin Dashboard";
     Layout = "_AdminLayout";
