--- a/SwiftStock(Redo)/Pages/Login.cshtml
+++ b/SwiftStock(Redo)/Pages/Login.cshtml
@@ -1,7 +1,8 @@
 ﻿
 
 @page
-@model AlfaMart.Pages.LoginModel
+@using SwiftStock.Pages
+@model SwiftStock.Pages.LoginModel
 @{
     ViewData["Title"] = "Login - SwiftStock";
 }
