--- a/SwiftStock(Redo)/Pages/Register.cshtml
+++ b/SwiftStock(Redo)/Pages/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model AlfaMart.Pages.RegisterModel
+@using SwiftStock.Pages
+@model SwiftStock.Pages.RegisterModel
 @{
     ViewData["Title"] = "Register - SwiftStock";
 }
