--- a/SwiftStock(Redo)/Pages/Sales.cshtml
+++ b/SwiftStock(Redo)/Pages/Sales.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model AlfaMart.Pages.SalesModel
+@using SwiftStock.Pages
+@model SwiftStock.Pages.SalesModel
 @{
        ViewData["Title"] = "Home";
     Layout = "_HomepageLayout";
